# playwright-pytest-screenplay-framework

./: .gitignore  .test_durations  AGENTS.md  CLAUDE.md  LICENSE  README.md  ToDo.md  pyproject.toml  pytest.ini
.agents/python-screenplay-generator/: SKILL.md
.claude/commands/: generate-screenplay-tests.md  gherkin-planner.md  planner.md  python-screenplay-generator.md
.github/workflows/: ci.yml  manual-ci.yml
docs/: .gitkeep  api_testing.md  architecture.md  assertion_model.md  codex_workflow.md  design_decisions.md  design_decisions_updated.md  domain_model.md  engine_flows.md  generate_tests_skill.md  get_started.md  getting_started.md  logging.md  playwright_api_testing.md  presentation.md  project_presentation.md  step_vocabulary.md  strict_screenplay_for_dummies.md  taskhub_api.yaml  ui_target_organization.md  work_items_api.yaml
docs/schemas/: delete_response.json  error_response.json  login_response.json  me_response.json  task.json  task_list.json  work_item.json  work_item_list.json
engine/: __init__.py
examples/: __init__.py
examples/taskhub/: __init__.py
examples/work_items/: __init__.py
intent/: __init__.py
intent/plans/: __init__.py
intent/schemas/: __init__.py
mapper/: __init__.py
saucedemo/: __init__.py
saucedemo/config/: __init__.py  runtime.py
saucedemo/questions/: __init__.py  cart_badge_count.py  inventory_count.py  on_inventory_page.py  on_login_page.py  totals_match_computed_sum.py
saucedemo/tasks/: __init__.py  add_product_to_cart.py  begin_checkout.py  cancel_checkout_info.py  click_login.py  complete_checkout.py  continue_checkout.py  dismiss_checkout_info_error.py  dismiss_login_error.py  enter_checkout_information.py  enter_password.py  enter_username.py  go_to_cart.py  login.py  logout.py  open_checkout_complete_page.py  open_login_page.py  open_product_details.py  open_product_details_by_id.py  open_saucedemo.py  proceed_to_checkout.py  provide_checkout_information.py  refresh_browser.py  remove_product_from_cart.py  return_to_products.py  sort_inventory.py  toggle_product_details_cart_action.py  wait_for_checkout_complete_page.py  wait_for_checkout_info_page.py  wait_for_inventory_page.py
saucedemo/ui/: saucedemo.py
screenplay/: __init__.py
screenplay/abilities/: __init__.py  browse_the_web.py
screenplay/config/: __init__.py
screenplay/core/: __int__.py  activity.py  actor.py  interaction.py  question.py  target.py  task.py
screenplay/interactions/: __init__.py  clear.py  click.py  fill.py  focus.py  navigate_to.py  press_key.py  refresh_page.py  scroll_into_view.py  select_by_value.py  wait_until_hidden.py  wait_until_visible.py
screenplay/questions/: __init__.py  attribute_of.py  cart_badge_count.py  current_url.py  focus_indicator_visible.py  is_focused.py  is_visible.py  on_inventory_page.py  on_login_page.py  text_of.py  texts_of.py  totals_match_computed_sum.py
screenplay/tasks/: __init__.py  add_product_to_cart.py  begin_checkout.py  click_login.py  complete_checkout.py  continue_checkout.py  dismiss_login_error.py  enter_checkout_information.py  enter_password.py  enter_username.py  go_to_cart.py  login.py  logout.py  open_saucedemo.py  proceed_to_checkout.py  provide_checkout_information.py  return_to_products.py  sort_inventory.py
screenplay/ui/: __init__.py  saucedemo.py
screenplay_core/: __init__.py
screenplay_core/abilities/: __init__.py  browse_the_web.py  call_the_api.py
screenplay_core/consequences/: __init__.py  ensure.py  playwright.py
screenplay_core/core/: __init__.py  activity.py  actor.py  consequence.py  interaction.py  question.py  target.py  task.py
screenplay_core/http/: call_the_api.py
screenplay_core/interactions/: __init__.py  _timeouts.py  clear.py  click.py  fill.py  focus.py  navigate_to.py  press_key.py  refresh_page.py  scroll_into_view.py  select_by_value.py  wait_until_hidden.py  wait_until_visible.py
screenplay_core/lifecycle/: decorators.py
screenplay_core/playwright/: browse_the_web.py  ensure.py  target.py
screenplay_core/questions/: __init__.py  attribute_of.py  current_url.py  focus_indicator_visible.py  (+4 more)
tests/: conftest.py  login_page.feature  test_actor_strictness.py  test_checkout_complete.py  test_checkout_info.py  test_generation_pipeline.py  test_golden_path_bdd.py  test_golden_path_poc.py  test_inventory.py  test_login.py  test_login_bdd.py  test_login_page_bdd.py  test_login_poc.py  test_logout_poc.py  test_product_details.py  test_ui_pages.py
(+180 files in other folders)
