[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-pytest-screenplay-framework"
version = "0.1.0"
description = "Playwright + pytest Screenplay framework with pytest-bdd behavior layer."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Stanislav Siris" }]
license = { file = "LICENSE" }
keywords = [
    "playwright",
    "pytest",
    "pytest-bdd",
    "screenplay",
    "test-automation",
    "ui-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.56,<2",
    "flask>=3.0,<4",
    "requests>=2.32,<3",
]

[project.urls]
Homepage = "https://github.com/stansiris/playwright-pytest-screenplay-framework"
Repository = "https://github.com/stansiris/playwright-pytest-screenplay-framework"
Issues = "https://github.com/stansiris/playwright-pytest-screenplay-framework/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.4,<9",
    "pytest-bdd>=8.1,<9",
    "pytest-playwright>=0.7,<1",
    "pytest-html>=4.1,<5",
    "pytest-cov>=6.0,<7",
]
tooling = [
    "black>=24.10,<26",
    "ruff>=0.9,<1",
]
dev = [
    "pytest>=8.4,<9",
    "pytest-bdd>=8.1,<9",
    "pytest-playwright>=0.7,<1",
    "pytest-html>=4.1,<5",
    "pytest-cov>=6.0,<7",
    "black>=24.10,<26",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
include = ["screenplay_core*", "examples*"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | venv
  | build
  | dist
  | \.claude
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", ".claude", "build", "dist"]
extend-exclude = ["venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
addopts = [
    "--screenshot=only-on-failure",
    "--tracing=retain-on-failure",
    "--output=test-results",
    "--junit-xml=test-results/junit.xml",
    "--html=test-results/report.html",
    "--self-contained-html",
]
log_cli = true
log_cli_level = "INFO"
# Suppress known third-party deprecation warning from gherkin-official on Python 3.14.
# Trigger path: pytest-bdd -> gherkin.gherkin_line (not project test code).
filterwarnings = [
    "ignore::DeprecationWarning:gherkin\\.gherkin_line",
]
markers = [
    "api: API-only scenarios.",
    "e2e: End-to-end scenarios spanning full user flows.",
    "hybrid: Scenarios that cross UI and API boundaries.",
    "integration: Cross-component integration scenarios.",
    "smoke: Critical happy-path validation scenarios.",
    "ui: User interface presentation and interaction scenarios.",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
